[feat] character details page addition (for dm). Docker file fixes
